# gui-robot_model

./: CMakeLists.txt  manifest.xml
scripts/: test.rb
src/: Adapter.cpp  Adapter.hpp  CMakeLists.txt  LocalTask.cpp  LocalTask.hpp  Main.cpp  RemoteTasks.cpp  RemoteTasks.hpp
test/: CMakeLists.txt  my_timer.h  plugintest.cpp
test_data/simple_arm/: model.sdf
test_data/spaceclimber_multi_visuals/: SpaceClimber.smurf  SpaceClimber.urdf  SpaceClimber_materials.yml  SpaceClimber_motors.yml  SpaceClimber_sensors.yml  SpaceClimber_simulation.yml
viz/: CMakeLists.txt  OSGHelpers.hpp  OSGSegment.cpp  OSGSegment.h  OSGSegmentCallback.cpp  OSGSegmentCallback.h  RobotModel.cpp  RobotModel.h  RobotVisualization.cpp  RobotVisualization.hpp  VBOVisitor.hpp  robot_model-viz-qt5.pc.in  robot_model-viz.pc.in  vizkit_plugin.rb
